--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Angular2CrudRest</title>
+  <title>Pocket Aces</title>
   <base href="/">
 
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
